--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
     font-size: 48px;
 }
 
-#seo {
+#menu {
     color: #d9dcd6;
 }
 
@@ -58,13 +58,13 @@ p {
     background-size: cover;
     background-position: center;
 }
-
-.float-left {
+/* changed these to id selectors since they are used indivdually */
+#float-left {
     float: left;
     margin-right: 25px;
 }
 
-.float-right {
+#float-right {
     float: right;
     margin-left: 25px;
 }
@@ -87,8 +87,11 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+/* changed heading size to be sequential */
 h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -101,6 +104,7 @@ h3 {
     max-width: 150px;
 }
 
+/* consolidated formating for all content-headings instead of listing them individually since they all had the same formatting */
 
 .content-headings {
     margin-bottom: 20px;
@@ -115,10 +119,7 @@ img {
     max-height: 200px;
 }
 
-h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+
 
 .footer {
     padding: 30px;
